--- a/BrandsShops.Api/appsettings.json
+++ b/BrandsShops.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=brandsshopdb;user=root;password=123456789;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
